--- a/src/DashComponents/Napsboard.css
+++ b/src/DashComponents/Napsboard.css
@@ -17,7 +17,10 @@
 }
 .imgCover {
   position: fixed;
+  overflow-x: auto;
   margin: 0px;
+  width:100vw;
+  justify-content: right;
   padding: 0px;
   right: 5px;
   top: 2px;
@@ -350,15 +353,19 @@
     position: fixed;
     justify-content: center;
     background-color: rgba(120, 120, 120, 0.9);
+    border-radius: 25px;
     text-shadow: none;
     font-weight: bold;
-    width: 100%;
-    left: 0;
-    bottom: 0;
+    width: 90%;
+    overflow-x: auto;
+    left: 0px;
+    bottom: 5px;
     z-index: 1;
+    gap:50px;
     display: inline-flex;
-    gap: 50px;
-    padding: 15px;
+    padding: 10px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
   .profiledetails {
     width: fit-content;
