--- a/src/index.css
+++ b/src/index.css
@@ -127,14 +127,11 @@ code {
 	font-size: 1.2rem;
 }
 .infos{
-  color:white;
   text-align: left;
-  margin:10px;
-  font-family: calibri;
+  font-family: "New Courier";
   word-spacing: 5px;
   font-style: italic;
-  width: 70vw;
-  font-size: 1.1rem;
+  font-size: 1.5rem;
 }
 .signup{
 	border: solid red 1px;
@@ -191,14 +188,12 @@ code {
   top:0px;
   left:0px;
   text-align: center;
-  padding-bottom: 70px;
-  overflow-y: auto;
   background-color: rgba(0,0,220,0.3);
   background-image: url('coverimg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   width:100vw;
-  height:100%;
+  height:100vh;
 }
 .sign{
   position: fixed;
@@ -246,13 +241,15 @@ code {
   cursor: pointer;
 }
 .container{
-  color: white;
-  font-family: monospace;
-  font-size: 1rem;
-  padding-left: 50px;
-  display: inline-block;
-  margin: 20px;
-  text-align: center;
+    color: white;
+    font-family: monospace;
+    overflow-y: auto;
+    padding-bottom: 170px;
+    font-size: 1rem;
+    margin:20px;
+    display: inline-block;
+    height:100vh;
+    text-align: center;
 }
 .usr{
   border-radius: 50%;
@@ -348,6 +345,7 @@ code {
   left:0px;
   width:100vw;
   height:100vh;
+  overflow-y: auto;
   margin:0px;
   padding:0px;
   background-color: rgba(0,0,220,0.3);
@@ -357,7 +355,7 @@ code {
   color:white;
   text-align: center;
   justify-content: center;
-  padding-top:100px;
+  padding-top:20px;
 
 }
 .signinCover{
@@ -416,13 +414,11 @@ code {
   .infos{
     color:white;
     text-align: left;
-    margin:10px;
-    font-family: calibri;
+    font-family: "New Courier";
     word-spacing: 5px;
     font-style: italic;
-    /* margin-top: 70px; */
-    width: 70vw;
-    font-size: .82rem;
+    font-size: 1rem;
+    width: 90vw;
   }
   .signup{
     border: solid red 1px;
@@ -476,17 +472,15 @@ code {
   }
   .signBack{
     position: fixed;
-    overflow-y: auto;
     top:0px;
     left:0px;
-    padding-bottom: 70px;
     text-align: center;
     background-color: rgba(0,0,220,0.3);
     background-image: url('coverimg.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     width:100vw;
-    height:100%;
+    height:100vh;
   }
   .sign{
     position: fixed;
@@ -515,38 +509,52 @@ code {
     /* border: solid white 1px; */
     border-radius: 20px;
   }
-  .sideBar{
+  .bottomBar{
     position: fixed;
     bottom: 2px;
     left:0px;
     margin: 0px;
     padding: 0px;
-    border-radius: 20px;
-    list-style: none;
-    display: inline-flex;
-    font-size: .8rem;
     width:100vw;
     text-align: center;
     justify-content: center;
+  }
+  .sideBar{
+    margin: auto;
+    padding-left: 10px;
+    padding-right: 10px;
+    overflow-x: auto;
+    border-radius: 15px;
+    list-style: none;
+    display: inline-flex;
+    font-size: .8rem;
+    width:92%;
+    text-align: left;
+    justify-content: left;
     height: fit-content;
     font-family: monospace;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.8);
   }
   .left{
     /* float: left; */
     margin: 15px;
-    margin-top: 20px;
+    margin-top: 15px;
     color:white;
+    text-shadow: white 0px 0px 3px;
+    width: max-content;
     text-decoration: none;
     cursor: pointer;
   }
   .container{
     color: white;
     font-family: monospace;
+    overflow-y: auto;
+    padding-bottom: 170px;
     font-size: 1rem;
     padding-left: 0px;
     display: inline-block;
-    margin: 0px;
+    width:90vw;
+    height:100vh;
     text-align: center;
   }
   .usr{
@@ -635,5 +643,23 @@ code {
   }
   .regInfo{
     text-align:left;
+  }
+  .signin{
+    position: fixed;
+    top:0px;
+    left:0px;
+    width:100vw;
+    height:100vh;
+    overflow-y: auto;
+    margin:0px;
+    background-color: rgba(0,0,220,0.3);
+    background-image: url('signinCover.jpg');
+    background-size: cover;
+    display: block;
+    color:white;
+    text-align: center;
+    justify-content: center;
+    padding-top:20px;
+
   }
 }
