--- a/src/DashComponents/Napsboard.css
+++ b/src/DashComponents/Napsboard.css
@@ -351,7 +351,7 @@
   .hometoggle {
     margin: 0px;
     position: fixed;
-    justify-content: left;
+    justify-content: center;
     background-color: rgba(120, 120, 120, 0.9);
     border-radius: 25px;
     text-shadow: none;
