--- a/src/index.css
+++ b/src/index.css
@@ -29,9 +29,12 @@ code {
 }
 .opt-navbar{
   /* width: 100vw; */
-  height: 100vh;
+  height: 90vh;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
   position: fixed;
   gap: 100px;
+  overflow-y: auto;
   top:0px;
   text-align: center;
   background-color: rgba(31, 29, 29, 0.8);
@@ -50,11 +53,14 @@ code {
 }
 .opt-bar{
   font-family: monospace;
-  font-size: 1rem;
+  font-size: 1.2rem;
   gap:120px;
+  overflow-y: auto;
+  height: 90%;
   display: inline-block;
-  margin: auto 0;
-  padding: auto 0;
+  padding-bottom: 50px;
+  margin: 0px;
+  padding: 0px;
   margin: 10px;
   color: white;
   list-style: none;
@@ -66,8 +72,9 @@ code {
 }
 .opt-left{
   float: left;
-  margin: 25px;
-  margin-top: 30px;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin-top: 35px;
   color: rgb(187, 183, 183);
   text-decoration: none;
   cursor: pointer;
@@ -340,14 +347,8 @@ code {
   text-align:left;
 }
 .signin{
-  position: fixed;
-  top:0px;
-  left:0px;
-  width:100vw;
-  height:100vh;
-  overflow-y: auto;
   margin:0px;
-  padding:0px;
+  padding-bottom: 300px;
   background-color: rgba(0,0,220,0.3);
   background-image: url('signinCover.jpg');
   background-size: cover;
@@ -407,7 +408,7 @@ code {
     font-family: calibri;
     word-spacing: 5px;
     font-style: italic;
-    /* margin-top: 70px; */
+    margin-top: 50px; 
     width: 50vw;
     font-size: 1.1rem;
   }
@@ -649,10 +650,11 @@ code {
     top:0px;
     left:0px;
     width:100vw;
-    height:100vh;
+    height: 100vh;
     overflow-y: auto;
     margin:0px;
-    background-color: rgba(0,0,220,0.3);
+    padding:0px;
+    background-color: rgba(0,0,20,0.3);
     background-image: url('signinCover.jpg');
     background-size: cover;
     display: block;
@@ -660,6 +662,14 @@ code {
     text-align: center;
     justify-content: center;
     padding-top:20px;
-
+    padding-bottom: 300px;
+  }
+  .signinCover{
+    margin-left: auto;
+    margin-right: auto;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
   }
 }
