--- a/src/DashComponents/Settings/Settings.css
+++ b/src/DashComponents/Settings/Settings.css
@@ -1,6 +1,6 @@
 .stgTop {
   position: fixed;
-  top: 5px;
+  top: 0px;
   left: 155px;
   width: 60vw;
   box-shadow: 0px 0px 7px rgba(100, 100, 100);
@@ -9,10 +9,12 @@
 }
 .cov {
   margin: 5px;
-  margin-top: 15px;
+  margin-top: 25px;
   padding: 10px;
-  background-color: rgba(250, 250, 250);
-  border: solid rgba(230, 230, 230) 2px;
+  background-color: rgba(230, 230, 230);
+  border: solid rgba(210, 210, 210) 2px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 8px black;
 }
 .cont {
   background-color: white;
