--- a/src/DashComponents/Settings/Settings.css
+++ b/src/DashComponents/Settings/Settings.css
@@ -3,6 +3,7 @@
   top: 0px;
   left: 155px;
   width: 60vw;
+  background-color: white;
   box-shadow: 0px 0px 7px rgba(100, 100, 100);
   margin: 0px;
   padding: 10px;
