--- a/src/DashComponents/Napsboard.css
+++ b/src/DashComponents/Napsboard.css
@@ -73,18 +73,23 @@
   display: block;
   margin: auto;
   padding: 0px;
-  margin-top: 30px;
+  border-radius: 10px;
   color: white;
-  padding: 15px;
+  float: left;
+  text-align: left;
+  width: 148px;
   text-decoration: none;
   cursor: pointer;
 }
 .userleftitem {
-  margin: 0px;
-  margin-left: 5px;
   flex-wrap: wrap;
-  display: inline-flex;
-  gap: 10px;
+  display: flex;
+  padding: 10px;
+  color: white;
+  padding-top: 20px;
+  float: left;
+  text-decoration: none;
+  padding-bottom: 20px;
   cursor: pointer;
 }
 .userlefttop {
@@ -99,19 +104,31 @@
   box-shadow: white 3px 3px 4px;
 }
 .userleftbottom {
-  float: left;
-  margin: 20px;
-  margin-top: 150px;
+  float: right;
+  margin: 10px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  font-family: 'Courier New';
   cursor: pointer;
-  font-style: italic;
-  font-weight: bold;
+  /* font-weight: bold; */
   font-size: 1rem;
 }
 .sideicons {
-  position: absolute;
-  left: 5px;
+  margin-right: auto;
+  padding: 5px;
   background-color: white;
   border-radius: 50%;
+}
+.taskdrop {
+  position: absolute;
+  z-index: 1;
+  top: 25px;
+  right: 8px;
+  cursor: pointer;
+  float: right;
+  border: solid rgba(0, 0, 0, 0) 2px;
+  color: white;
+  outline: none;
 }
 .srch {
   padding: 15px;
@@ -344,7 +361,7 @@
   }
   .userbar {
     height: 90vh;
-    background-color: rgba(7, 7, 40, 0.95);
+    background-color: rgba(7, 7, 40, 0.8);
     z-index: 1;
   }
   .hometoggleCover {
