--- a/src/index.css
+++ b/src/index.css
@@ -87,6 +87,7 @@ code {
   box-shadow: 0px 0px 9px black;
   border-radius: 50px;
   border: solid rgba(50, 49, 49, 1) 2px;
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 1);
   word-spacing: 5px;
   font-style: italic;
   font-size: 1.2rem;
@@ -397,7 +398,7 @@ code {
 }
 @media screen and (max-width: 700px) {
   .home {
-    padding: 30px;
+    padding: 15px;
     margin: 0 auto;
     margin-top: 0px;
     padding-top: 70px;
@@ -454,7 +455,7 @@ code {
   .info {
     color: white;
     text-align: left;
-    margin: 10px;
+    margin: 0px;
     font-family: 'Courier New', Courier, monospace;
     font-style: italic;
     margin-top: 50px;
