--- a/src/index.css
+++ b/src/index.css
@@ -343,10 +343,11 @@ code {
   color: brown;
 }
 .regInfo {
-  text-align: left;
-  padding: 10px;
+  text-align: center;
   border-radius: 10px;
-  width: 90%;
+  margin-top: 25px;
+  margin-bottom: 25px;
+  display: block;
   overflow-x: auto;
   border: solid rgba(230, 230, 230, 1);
 }
@@ -698,13 +699,15 @@ code {
     color: brown;
   }
   .regInfo {
-    text-align: left;
-    padding: 10px;
+    text-align: center;
+    margin-top: 25px;
+    margin-bottom: 25px;
+    padding: 0px;
     border-radius: 10px;
-    width: 90%;
     overflow-x: auto;
     border: solid rgba(230, 230, 230, 1);
   }
+
   .signin {
     position: fixed;
     top: 0px;
