--- a/src/DashComponents/Napsboard.css
+++ b/src/DashComponents/Napsboard.css
@@ -55,6 +55,7 @@
   height: 100vh;
   overflow-y: auto;
   width: 150px;
+  z-index: 2;
   background-color: rgba(7, 7, 40);
   color: white;
   display: block;
