--- a/src/index.css
+++ b/src/index.css
@@ -363,38 +363,32 @@ code {
 }
 .signin {
   margin: 0px;
-  padding-bottom: 300px;
-  background-color: rgba(0, 0, 0, 1);
-  background-image: url('signinCover.jpg');
-  background-size: cover;
+  padding: 0px;
   display: block;
-  color: white;
+  color: black;
   text-align: center;
   justify-content: center;
-  padding-top: 20px;
 }
 .signinCover {
-  margin: 0px;
-  padding: 0px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0px auto;
   width: fit-content;
+  padding: 0px;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
 .signinfield {
-  color: white;
+  color: black;
   background-color: rgba(0, 0, 0, 0);
   border: 0px;
-  border-bottom: solid white 1px;
+  border-bottom: solid black 1px;
   margin-top: 30px;
   border-radius: 30px;
   margin-bottom: 10px;
   outline: none;
   outline-color: rgba(0, 0, 0, 0);
   padding: 15px;
-  padding-bottom: 5px;
+  /* padding-bottom: 5px; */
   width: 250px;
 }
 @media screen and (max-width: 700px) {
@@ -710,28 +704,18 @@ code {
   }
 
   .signin {
-    position: fixed;
-    top: 0px;
-    left: 0px;
-    width: 100vw;
-    height: 100vh;
-    overflow-y: auto;
     margin: 0px;
     padding: 0px;
-    background-color: rgba(0, 0, 20, 0.3);
-    background-image: url('signinCover.jpg');
     background-size: cover;
     display: block;
-    color: white;
+    color: black;
     text-align: center;
     justify-content: center;
-    padding-top: 20px;
-    padding-bottom: 300px;
   }
   .signinCover {
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0px auto;
     width: fit-content;
+    padding: auto 50px;
     justify-content: center;
     align-items: center;
     text-align: center;
