--- a/src/DashComponents/Napsboard.css
+++ b/src/DashComponents/Napsboard.css
@@ -240,9 +240,9 @@
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 1;
+  z-index: 3;
   color: white;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(19, 19, 20, 1);
   width: 100%;
   height: 100%;
 }
@@ -257,24 +257,35 @@
   font-family: monospace;
   width: initial;
   padding: 7px;
-  margin: 3px;
+  margin: auto 30px;
   cursor: pointer;
 }
 .searchfilter {
   position: absolute;
-  right: 0px;
+  display: flex;
+  left: 15px;
+  top: 40px;
   list-style: none;
   font-size: 1rem;
-  background-color: rgba(7, 7, 40, 0.8);
+  border-radius: 10px;
+  box-shadow: 0px 0px 4px black;
+  background-color: rgba(255, 255, 255, 0.9);
+  color: black;
   padding: 10px;
   z-index: 1;
   cursor: auto;
   text-align: left;
 }
+.filtertitle {
+  font-weight: bold;
+  margin-bottom: 10px;
+  border-bottom: solid rgba(200, 200, 200, 1) 2px;
+}
 .searchfilteritem {
   font-size: 0.8rem;
   padding: 3px;
-  margin: 2px;
+  margin: 5px 0px;
+  color: white;
   background-color: rgba(0, 0, 0, 0.6);
   cursor: pointer;
 }
@@ -285,29 +296,30 @@
   margin-top: 30px;
   width: 50%;
   padding: 5px;
-  border-radius: 20px;
-  background-color: rgba(7, 7, 40, 0.6);
-  border: solid rgba(7, 7, 40, 0.6) 3px;
+  color: black;
+  border-radius: 25px;
+  background-color: white;
+  box-shadow: 0px 0px 7px black;
 }
 .napsitesearchinput {
   width: 80%;
   margin: 5px;
-  background-color: rgba(0, 0, 0, 0.5);
   padding: 10px;
   border: none;
-  color: white;
+  color: black;
   outline: none;
 }
 .searchby {
-  border-radius: 5px;
+  border-radius: 15px;
+  padding: 5px;
   border: none;
-  background-color: rgba(0, 0, 0, 0);
-  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  color: black;
   margin: 5px;
   cursor: pointer;
 }
 .searchbyitem {
-  background-color: black;
+  background-color: white;
 }
 .ftr {
   position: relative;
@@ -336,11 +348,11 @@
 }
 .napsiteview {
   position: relative;
-  background-color: rgba(240, 240, 240, 0.8);
+  background-color: rgba(250, 250, 250, 1);
   color: black;
   font-family: monospace;
   font-size: 0.9rem;
-  border-radius: 30px;
+  border-radius: 40px;
   width: 300px;
   height: 150px;
   margin: 40px;
@@ -379,7 +391,17 @@
   padding: 10px;
   padding-top: 20px;
 }
+.profimgview {
+  background-color: rgba(0, 0, 0, 1);
+  width: 500px;
+  height: 100%;
+  margin: auto;
+  padding-top: 100px;
+}
 @media screen and (max-width: 700px) {
+  .profimgview {
+    width: 100%;
+  }
   .closenav {
     width: 100vw;
     height: 100vh;
@@ -474,7 +496,7 @@
   }
   .napsiteview {
     position: relative;
-    background-color: rgba(240, 240, 240, 0.8);
+    background-color: rgba(250, 250, 250, 1);
     color: black;
     font-family: monospace;
     font-size: 0.9rem;
