--- a/src/DashComponents/Events/Events.css
+++ b/src/DashComponents/Events/Events.css
@@ -18,7 +18,8 @@
   width: 50%;
   font-family: fantasy;
   letter-spacing: 0.2rem;
-  background-color: rgba(235, 235, 235, 1);
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 0px 0px 3px black;
   color: black;
   padding: 15px;
   /* font-weight: bold; */
