--- a/src/DashComponents/EVoting/EVoting.css
+++ b/src/DashComponents/EVoting/EVoting.css
@@ -1,10 +1,12 @@
 .bpd {
   position: fixed;
   top: 5px;
-  left: 205px;
+  left: 208px;
   z-index: 1;
   padding: 10px;
-  border: solid lightgreen 2px;
+  border: solid green 2px;
+  color: green;
+  background-color: white;
   border-radius: 10px;
   font-family: monospace;
   font-size: 0.8rem;
@@ -60,7 +62,7 @@
   margin: 30px auto;
   padding-bottom: 35px;
   box-shadow: 0px 0px 8px black;
-  /* background-color: rgba(110, 110, 255, 1); */
+  background-color: white;
   width: 95%;
   border-radius: 60px 60px 0px 0px;
   color: black;
