--- a/src/DashComponents/Events/Events.css
+++ b/src/DashComponents/Events/Events.css
@@ -8,14 +8,14 @@
   border-radius: 25px;
   padding: 0px 0px;
   color: black;
-  width: 50%;
+  width: 400px;
   bottom: 5px;
 }
 .toppostlabel {
   position: fixed;
   top: 0px;
   z-index: 1;
-  width: 50%;
+  width: 400px;
   font-family: fantasy;
   letter-spacing: 0.2rem;
   background-color: rgba(255, 255, 255, 0.9);
@@ -37,7 +37,7 @@
   border-radius: 20px;
   width: 60%;
   padding: 10px;
-  margin: 10px;
+  margin: auto 20px;
   background-color: rgba(235, 235, 235, 1);
   justify-content: center;
   text-align: center;
@@ -58,7 +58,15 @@
   opacity: 0.7;
   font-style: italic;
 }
+.quizcover {
+  width: 40%;
+  margin: auto;
+}
 @media screen and (max-width: 700px) {
+  .quizcover {
+    width: 100%;
+    margin: 0px;
+  }
   .postcover {
     left: 0px;
   }
@@ -66,7 +74,7 @@
     border-radius: 20px;
     width: 80%;
     padding: 10px;
-    margin: 10px;
+    margin: 10px 10px;
     font-size: 0.9rem;
     justify-content: center;
     text-align: center;
