--- a/src/DashComponents/Events/Events.css
+++ b/src/DashComponents/Events/Events.css
@@ -38,7 +38,8 @@
   width: 60%;
   padding: 10px;
   margin: auto 20px;
-  background-color: rgba(235, 235, 235, 1);
+  /* background-color: rgba(235, 235, 235, 1); */
+  background-color: whitesmoke;
   justify-content: center;
   text-align: center;
   cursor: pointer;
