--- a/src/DashComponents/Events/Events.css
+++ b/src/DashComponents/Events/Events.css
@@ -98,14 +98,16 @@
     text-align: left;
     left: auto;
     right: auto;
-    position: unset;
+    position: fixed;
     width: 95%;
-    bottom: auto;
+    bottom: 5px;
   }
   .toppostlabel {
-    left: 0px;
+    position: fixed;
+    width: 93%;
     top: 0px;
-    width: 100vw;
+    left: auto;
+    right: auto;
   }
   [data-placeholder]:empty:before {
     content: attr(data-placehoder);
