--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
+  background-color: rgba(240, 240, 255, 1);
   /* text-align: center;
   justify-content: center;
   align-items: center;
@@ -163,6 +164,7 @@ code {
   line-height: 1rem;
   margin: 10px;
   margin-bottom: 20px;
+  background-color: white;
   padding: 10px;
   box-shadow: -7px -7px 10px rgba(0, 0, 0, 0.1), 7px 7px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
@@ -208,11 +210,11 @@ code {
 }
 .signBack {
   text-align: center;
-  background-color: white;
+  background-color: rgba(240, 240, 255, 1);
 }
 .sign {
   text-align: center;
-  background-color: white;
+  background-color: rgba(0, 0, 0, 0);
 }
 .close {
   font-size: 1.3rem;
@@ -277,11 +279,10 @@ code {
 .input {
   color: black;
   background-color: rgba(0, 0, 0, 0);
-  border: 0px;
-  border-radius: 30px;
-  border-bottom: solid black 1px;
+  border: solid black 1px;
+  border-radius: 15px;
   margin-top: 10px;
-  margin-bottom: 5px;
+  margin-bottom: 0px;
   outline: none;
   outline-color: rgba(0, 0, 0, 0);
   padding: 15px;
@@ -290,19 +291,27 @@ code {
 .over {
   position: relative;
 }
+.inputStyle {
+  font-size: 0.8rem;
+  font-weight: bold;
+  color: green;
+  position: absolute;
+  background-color: rgba(240, 240, 255, 1);
+  width: max-content;
+  border-radius: 10px;
+  top: 10px;
+  margin: 5px;
+  padding: 2px 7px;
+  padding-bottom: 0px;
+  left: 13px;
+  display: none;
+}
+
 .signover {
   position: relative;
   text-align: center;
 }
-.inputStyle {
-  font-size: 0.8rem;
-  font-weight: bold;
-  color: lightgreen;
-  position: absolute;
-  top: 0px;
-  left: 13px;
-  display: none;
-}
+
 .viewcurr {
   padding: 3px;
   width: 2px;
@@ -388,10 +397,11 @@ code {
   letter-spacing: 3px;
   font-family: fantasy;
   color: black;
+  background-color: white;
   border-radius: 10px;
   border: solid rgba(230, 230, 230) 2px;
   margin: 20px;
-  box-shadow: 3px 3px 4px black;
+  box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.1), 5px 5px 10px rgba(0, 0, 0, 0.1);
 }
 .signin {
   margin: 0px;
@@ -569,11 +579,11 @@ code {
   }
   .signBack {
     text-align: center;
-    background-color: #ffffff;
+    background-color: rgba(240, 240, 255, 1);
   }
   .sign {
     text-align: center;
-    background-color: white;
+    background-color: rgba(0, 0, 0, 0);
   }
   .close {
     font-size: 1.1rem;
@@ -645,32 +655,6 @@ code {
   }
   .radio {
     cursor: pointer;
-  }
-  .input {
-    color: black;
-    background-color: rgba(0, 0, 0, 0);
-    border: 0px;
-    border-radius: 30px;
-    border-bottom: solid black 1px;
-    margin-top: 10px;
-    margin-bottom: 0px;
-    outline: none;
-    outline-color: rgba(0, 0, 0, 0);
-    padding: 15px;
-    width: 250px;
-  }
-  .over {
-    position: relative;
-  }
-  .inputStyle {
-    font-size: 0.8rem;
-    font-weight: bold;
-    color: lightgreen;
-    position: absolute;
-    top: 0px;
-    margin: 5px;
-    left: 13px;
-    display: none;
   }
   .viewcurr {
     padding: 3px;
