--- a/src/index.css
+++ b/src/index.css
@@ -388,8 +388,8 @@ code {
   padding: 10px;
   letter-spacing: 3px;
   font-family: fantasy;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: blue;
   border-radius: 10px;
   margin: 20px;
   box-shadow: -5px -5px 10px rgba(0, 0, 0, 0.1), 5px 5px 10px rgba(0, 0, 0, 0.1);
