--- a/src/index.css
+++ b/src/index.css
@@ -473,10 +473,9 @@ code {
 .signinfield {
   color: black;
   background-color: rgba(0, 0, 0, 0);
-  border: 0px;
-  border-bottom: solid black 1px;
+  border: solid black 1px;
   margin-top: 30px;
-  border-radius: 30px;
+  border-radius: 20px;
   margin-bottom: 10px;
   outline: none;
   outline-color: rgba(0, 0, 0, 0);
