--- a/src/DashComponents/Napsboard.css
+++ b/src/DashComponents/Napsboard.css
@@ -131,10 +131,10 @@
 }
 .sideicons {
   margin-right: auto;
-  padding: 5px;
-  background-color: white;
-  border-radius: 50%;
-  border: solid orange 1px;
+  /* padding: 5px; */
+  /* background-color: white; */
+  /* border-radius: 50%; */
+  /* border: solid orange 1px; */
   /* box-shadow: orange 0px 0px 7px; */
 }
 .taskdrop {
@@ -143,11 +143,7 @@
   top: 25px;
   right: 8px;
   cursor: pointer;
-  padding: 2px;
-  border-radius: 50%;
-  background-color: rgba(29, 29, 30, 0.8);
   /* box-shadow: 0px 0px 9px white; */
-  border: solid rgba(0, 0, 0, 0) 2px;
   color: darkorange;
   outline: none;
 }
