--- a/src/DashComponents/Napsboard.css
+++ b/src/DashComponents/Napsboard.css
@@ -203,12 +203,11 @@
   font-style: italic;
 }
 .dropitem {
+  display: inline-flex;
   width: max-content;
   z-index: 2;
   padding: 10px;
   height: fit-content;
-  color: darkorange;
-  box-shadow: 0px 0px 7px rgba(130, 130, 140, 1);
   margin-bottom: 15px;
   cursor: pointer;
 }
